# tract7dt

./: README.md  pyproject.toml
docs/: commands.md  configuration.md  index.md  outputs.md  performance.md  pipeline-behavior.md  quickstart.md  sample-data.md  troubleshooting.md
tract7dt/: cli.py  config.py  epsf.py  merge.py  patch_inputs.py  pipeline.py  run_patches.py  sample_data.py
tract7dt/data/: sample_config.yaml
