[project]
name = "tract7dt"
version = "0.4.1"
description = "7DT image-specific Tractor photometry pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Danhyeuk Seol" }]
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "astropy",
  "photutils",
  "sep",
  "matplotlib",
  "fitsio",
  "emcee",
  "PyYAML",
]

[project.scripts]
tract7dt = "tract7dt.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tract7dt", "tract7dt.data"]

[tool.setuptools.package-data]
"tract7dt.data" = ["sample_config.yaml"]
